--- a/views/form.html
+++ b/views/form.html
@@ -26,10 +26,11 @@
 
       <button onclick="submitForm()">Submit</button>
       <button onclick="location.href = '/'">Get Back</button>
+      <!-- <button onclick="loadPage('', 'form-card')">Get Back</button> -->
     </div>
 
     <div id="toast">✔ Form submitted successfully</div>
-
+    <div id="app"></div>
     <script src="/script.js"></script>
   </body>
 </html>
