--- a/views/landing.html
+++ b/views/landing.html
@@ -13,6 +13,10 @@
       </p>
       <button onclick="location.href = '/form'">Proceed</button>
       <button onclick="location.href = '/admin'">Login as Admin</button>
+      <!-- <button onclick="loadPage('form', 'landing')">Proceed</button>
+      <button onclick="loadPage('admin', 'landing')">Login as Admin</button> -->
     </div>
+    <div id="app"></div>
+    <script src="/script.js"></script>
   </body>
 </html>
