--- a/views/success.html
+++ b/views/success.html
@@ -9,6 +9,9 @@
       <h1>✅ Your form has been submitted</h1>
       <p>Thank you. Our review team will get back to you shortly.</p>
       <button onclick="location.href = '/'">Go to Home</button>
+      <!-- <button onclick="loadPage('', 'success-card')">Get Back</button> -->
     </div>
+
+    <div id="app"></div>
   </body>
 </html>
