--- a/views/admin.html
+++ b/views/admin.html
@@ -79,10 +79,10 @@
 
         <input id="m_first_name" placeholder="First Name" />
         <input id="m_last_name" placeholder="Last Name" />
-        <input id="m_phone" placeholder="Phone" />
         <input id="m_address" placeholder="Address" />
-        <input id="m_email" placeholder="Email" />
-        <input id="m_mobile" placeholder="Mobile" />
+        <input id="m_phone" placeholder="Phone" maxlength="10" />
+        <input id="m_mobile" placeholder="Mobile" maxlength="10" />
+        <input id="m_email" placeholder="Email" type="email" />
         <input id="m_bank" placeholder="Bank" />
         <input id="m_device" placeholder="Device" />
         <textarea id="m_description" placeholder="Issue"></textarea>
